--- a/backend/functions/src/helpers/templates/query.html
+++ b/backend/functions/src/helpers/templates/query.html
@@ -19,49 +19,47 @@
     <div class="m-2">
       <div class="flex">
         <div class="flex items-center me-4">
-          <div class="flex items-center me-4">
-            <input
-              checked
-              id="none-radio"
-              type="radio"
-              value="none"
-              name="radio-group"
-              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-            />
-            <label
-              for="none-radio"
-              class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-              >None</label
-            >
-          </div>
-          <div class="flex items-center me-4">
-            <input
-              id="bearer-token-radio"
-              type="radio"
-              value="bearer_token"
-              name="radio-group"
-              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-            />
-            <label
-              for="bearer-token-radio"
-              class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-              >Bearer Token</label
-            >
-          </div>
-          <div class="flex items-center me-4">
-            <input
-              id="api-key-radio"
-              type="radio"
-              value="api_key"
-              name="radio-group"
-              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-            />
-            <label
-              for="api-key-radio"
-              class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-              >API Key</label
-            >
-          </div>
+          <input
+            checked
+            id="none-radio"
+            type="radio"
+            value="none"
+            name="key-type-group"
+            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+          />
+          <label
+            for="none-radio"
+            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+            >None</label
+          >
+        </div>
+        <div class="flex items-center me-4">
+          <input
+            id="bearer-token-radio"
+            type="radio"
+            value="bearer_token"
+            name="key-type-group"
+            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+          />
+          <label
+            for="bearer-token-radio"
+            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+            >Bearer Token</label
+          >
+        </div>
+        <div class="flex items-center me-4">
+          <input
+            id="api-key-radio"
+            type="radio"
+            value="api_key"
+            name="key-type-group"
+            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+          />
+          <label
+            for="api-key-radio"
+            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+            >API Key</label
+          >
         </div>
       </div>
 
@@ -82,13 +80,20 @@
       <span>(or press [Ctrl] + [Enter] inside the editor)</span>
     </div>
     <div class="grid grid-cols-2 gap-4 h-full">
+      <div class="h-full">
+        <div
+          id="container-1"
+          style="border: 1px solid grey; resize: vertical; overflow: auto"
+          class="h-[calc(100vh-310px)]"
+        ></div>
+        <div
+          id="container-2"
+          style="border: 1px solid grey; resize: vertical; overflow: auto"
+          class="h-[210px] mt-1"
+        ></div>
+      </div>
       <div
-        id="container-1"
-        class="h-full"
-        style="border: 1px solid grey; resize: vertical; overflow: auto"
-      ></div>
-      <div
-        id="container-2"
+        id="container-3"
         class="h-full"
         style="border: 1px solid grey; resize: vertical; overflow: auto"
       ></div>
@@ -104,52 +109,52 @@
     <script src="https://unpkg.com/monaco-editor@0.44.0/min/vs/editor/editor.main.nls.js"></script>
     <script src="https://unpkg.com/monaco-editor@0.44.0/min/vs/editor/editor.main.js"></script>
     <script>
+      const apiUrl = window.location.href.replace(/\/query$/, "/giraffeql");
+
+      function getHeaders() {
+        const keyString = document.getElementById("key").value;
+        const keyType = document.querySelector(
+          'input[name="key-type-group"]:checked'
+        ).value; // bearer_token | api_key | none
+
+        return {
+          "Content-Type": "application/json",
+          ...(keyType !== "none" && {
+            [keyType === "api_key" ? "x-api-key" : "Authorization"]: `${
+              keyType === "bearer_token" ? "Bearer " : ""
+            }${keyString}`,
+          }),
+        };
+      }
+
+      function setRequestEditorString() {
+        requestEditor.setValue(`fetch("${apiUrl}", {
+  method: "post",
+  headers: ${JSON.stringify(getHeaders(), null, 4).replace(
+    /\}$/,
+    "}".padStart(3)
+  )},
+  body: JSON.stringify(query)
+}).then(res => res.json())`);
+      }
+
       async function submit() {
         responseEditor.setValue("Sending query...");
         try {
-          const keyString = document.getElementById("key").value;
-          const keyType = document.querySelector(
-            'input[name="radio-group"]:checked'
-          ).value; // bearer_token | api_key | none
+          const headers = getHeaders();
 
-          const apiUrl = window.location.href.replace(/\/query$/, "/giraffeql");
-
-          const headers = {
-            "Content-Type": "application/json",
-            ...(keyType !== "none" && {
-              [keyType === "api_key" ? "x-api-key" : "Authorization"]: `${
-                keyType === "bearer_token" ? "Bearer " : ""
-              }${keyString}`,
-            }),
-          };
-
-          // clear the fetch statement
-          queryEditor.setValue(
-            queryEditor.getValue().replace(
-              /\/\*\sREQUEST\sSTART\s\*\/((\n|.)*)\/\*\sREQUEST\sEND\s\*\//m,
-              `/* REQUEST START */` +
-                `
-  return fetch("${apiUrl}", {
-    method: "post",
-    headers: ${JSON.stringify(headers, null, 6).replace(
-      /\}$/,
-      "}".padStart(4)
-    )},
-    body: JSON.stringify(query)
-  }).then(res => res.json()).then(json => json.data)` +
-                `
-  /* REQUEST END */`
-            )
-          );
+          setRequestEditorString();
 
           const queryMatches = queryEditor
             .getValue()
-            .match(/\/\*\sQUERY\sSTART\s\*\/((\n|.)*)\/\*\sQUERY\sEND\s\*\//m);
+            .match(
+              /\/\*\sQUERY\sSTART\s\*\/\nconst\squery:\sGetQuery<keyof\sRoot>\s=(\s|\n)*((\n|.)*)\n\/\*\sQUERY\sEND\s\*\//m
+            );
 
-          if (!queryMatches || !queryMatches[1])
+          if (!queryMatches || !queryMatches[2])
             throw new Error(`Invalid query`);
 
-          const query = new Function(`return {${queryMatches[1]}}`)();
+          const query = new Function(`return ${queryMatches[2]}`)();
 
           const response = await fetch(apiUrl, {
             method: "post",
@@ -177,12 +182,25 @@
         }
       );
 
+      const requestEditor = monaco.editor.create(
+        document.getElementById("container-2"),
+        {
+          value: ``,
+          language: "typescript",
+          automaticLayout: true,
+          wordWrap: "on",
+          readOnly: true,
+        }
+      );
+
+      setRequestEditorString();
+
       queryEditor.addCommand(monaco.KeyMod.CtrlCmd | monaco.KeyCode.Enter, () =>
         submit()
       );
 
       const responseEditor = monaco.editor.create(
-        document.getElementById("container-2"),
+        document.getElementById("container-3"),
         {
           language: "json",
           automaticLayout: true,
