Various updates frontend and backend

--- a/backend/functions/src/helpers/templates/promptEmpty.html
+++ b/backend/functions/src/helpers/templates/promptEmpty.html
@@ -201,9 +201,8 @@
 
         if (aiModel === "code") {
           giraffeqlQuery = {
-            executeVertexRequest: {
+            executeGoogleApiRequest: {
               __args: {
-                query,
                 url: `https://us-central1-aiplatform.googleapis.com/v1/projects/${projectId}/locations/us-central1/publishers/google/models/code-bison:predict`,
                 data: {
                   instances: [
@@ -217,14 +216,14 @@
                     temperature: 0.2,
                   },
                 },
+                method: "post",
               },
             },
           };
         } else {
           giraffeqlQuery = {
-            executeVertexRequest: {
+            executeGoogleApiRequest: {
               __args: {
-                query,
                 url: `https://us-central1-aiplatform.googleapis.com/v1/projects/${projectId}/locations/us-central1/publishers/google/models/gemini-pro:streamGenerateContent`,
                 data: {
                   contents: [
@@ -243,6 +242,7 @@
                     topP: 1,
                   },
                 },
+                method: "post",
               },
             },
           };
