Various frontend and backend updates

--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -51,3 +51,7 @@
   border: 1px solid rgb(122, 122, 122);
   border-radius: 5px;
 }
+
+.selected-element {
+  border: 5px solid var(--v-secondary-base);
+}
