--- a/backend/functions/templates/query.html
+++ b/backend/functions/templates/query.html
@@ -17,67 +17,72 @@
 
   <body class="h-full">
     <div class="m-2">
-      <div class="flex">
-        <div class="flex items-center me-4">
-          <input
-            checked
-            id="none-radio"
-            type="radio"
-            value="none"
-            name="key-type-group"
-            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-          />
-          <label
-            for="none-radio"
-            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-            >None</label
-          >
-        </div>
-        <div class="flex items-center me-4">
-          <input
-            id="bearer-token-radio"
-            type="radio"
-            value="bearer_token"
-            name="key-type-group"
-            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-          />
-          <label
-            for="bearer-token-radio"
-            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-            >Bearer Token</label
-          >
-        </div>
-        <div class="flex items-center me-4">
-          <input
-            id="api-key-radio"
-            type="radio"
-            value="api_key"
-            name="key-type-group"
-            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-          />
-          <label
-            for="api-key-radio"
-            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-            >API Key</label
-          >
-        </div>
-      </div>
+      <div class="grid grid-cols-2 gap-4 h-full">
+        <div class="h-full">
+          <div class="flex">
+            <div class="flex items-center me-4">
+              <input
+                checked
+                id="none-radio"
+                type="radio"
+                value="none"
+                name="key-type-group"
+                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+              />
+              <label
+                for="none-radio"
+                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                >None</label
+              >
+            </div>
+            <div class="flex items-center me-4">
+              <input
+                id="bearer-token-radio"
+                type="radio"
+                value="bearer_token"
+                name="key-type-group"
+                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+              />
+              <label
+                for="bearer-token-radio"
+                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                >Bearer Token</label
+              >
+            </div>
+            <div class="flex items-center me-4">
+              <input
+                id="api-key-radio"
+                type="radio"
+                value="api_key"
+                name="key-type-group"
+                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+              />
+              <label
+                for="api-key-radio"
+                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                >API Key</label
+              >
+            </div>
+          </div>
 
-      <input
-        type="text"
-        class="p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-        id="key"
-        name="key"
-        style="width: 400px"
-        autocomplete="off"
-      />
-      <button
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        onclick="submit()"
-      >
-        Submit
-      </button>
-      <span>(or press [Ctrl] + [Enter] inside the editor)</span>
+          <input
+            type="text"
+            class="p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            id="key"
+            name="key"
+            style="width: 400px"
+            autocomplete="off"
+          />
+          <button
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            onclick="submit()"
+          >
+            Submit
+          </button>
+          <span>(or press [Ctrl] + [Enter] inside the editor)</span>
+        </div>
+        <div class="h-full" id="status-code"></div>
+      </div>
     </div>
     <div class="grid grid-cols-2 gap-4 h-full">
       <div class="h-full">
@@ -219,6 +224,11 @@
           const responseData = await response.json();
 
           responseEditor.setValue(JSON.stringify(responseData, null, 2));
+
+          // set the response status code
+          document.getElementById(
+            "status-code"
+          ).innerText = `Response Status: ${response.status} ${response.statusText}`;
         } catch (err) {
           console.log(err);
           // on error, display the message
