Frontend and backend updates

--- a/backend/functions/templates/email.html
+++ b/backend/functions/templates/email.html
@@ -335,10 +335,8 @@
               >
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link"
-                      >TheCubicle, 8 Westchester Plaza, Suite 184, Elmsford, NY
-                      10523, United States</span
-                    >
+                    <span class="apple-link">{{ companyAddress }}</span>
+                    {{ unsubscribeContent }}
                   </td>
                 </tr>
               </table>
